Fixed spacing in stats sidebar.

--- a/src/css/stats.css
+++ b/src/css/stats.css
@@ -11,7 +11,7 @@
 
 .stats-category {
   font-weight: bolder;
-  margin-top: 1.5rem;
+  margin-top: 2rem;
 }
 
 .stats-category:first-child {
